--- a/trunk/Annotator/vmqt/SConstruct
+++ b/trunk/Annotator/vmqt/SConstruct
@@ -1,12 +1,12 @@
 #!/usr/bin/python
 import os, sys, glob
 
-options = Options('options.cache', ARGUMENTS)
-options.Add(PathOption('clam_prefix', 'The prefix where CLAM was installed', ''))
-options.Add(BoolOption('release', 'Build CLAM Annotator enabling compiler optimizations', 'no') )
-options.Add(BoolOption('verbose', 'Display the full command line instead a short command description', 'no') )
+options = Variables('options.cache', ARGUMENTS)
+options.Add(PathVariable('clam_prefix', 'The prefix where CLAM was installed', ''))
+options.Add(BoolVariable('release', 'Build CLAM Annotator enabling compiler optimizations', 'no') )
+options.Add(BoolVariable('verbose', 'Display the full command line instead a short command description', 'no') )
 if sys.platform=="linux2" :
-	options.Add(BoolOption('crossmingw', 'Using MinGW crosscompiler mode', 'no') )
+	options.Add(BoolVariable('crossmingw', 'Using MinGW crosscompiler mode', 'no') )
 
 def scanFiles(pattern, paths) :
 	files = []
