--- a/trunk/CLAM/examples/PluginExamples/ClamNativePluginExample/SConstruct
+++ b/trunk/CLAM/examples/PluginExamples/ClamNativePluginExample/SConstruct
@@ -13,9 +13,9 @@ def scanFiles(pattern, paths) :
 def recursiveDirs(root) :
 	return filter( (lambda a : a.rfind( ".svn")==-1 ),  [ a[0] for a in os.walk(root)]  )
 
-options = Options('options.cache', ARGUMENTS)
-options.Add(PathOption('clam_prefix', 'The prefix where CLAM was installed', ''))
-options.Add(BoolOption('crossmingw', 'Using MinGW crosscompiler mode', 'no') )
+options = Variables('options.cache', ARGUMENTS)
+options.Add(PathVariable('clam_prefix', 'The prefix where CLAM was installed', ''))
+options.Add(BoolVariable('crossmingw', 'Using MinGW crosscompiler mode', 'no') )
 
 env = Environment(ENV=os.environ, options=options)
 options.Save('options.cache', env)
