--- a/trunk/CLAM/plugins/resampling/SConstruct
+++ b/trunk/CLAM/plugins/resampling/SConstruct
@@ -4,11 +4,11 @@ import os, glob, sys
 
 libraryName='plugins_resampling'
 
-options = Options('options.cache', ARGUMENTS)
-options.Add(PathOption('clam_prefix', 'The prefix where CLAM was installed', ''))
-options.Add(PathOption('prefix', 'Installation prefix (normally /usr, by default this is clam_prefix)', "", validator=PathOption.PathAccept))
-options.Add(PathOption('sandbox_path', 'Path where third party libraries were installed (in windows)', "", validator=PathOption.PathAccept))
-options.Add(BoolOption('crossmingw', 'Using MinGW crosscompiler mode', 'no') )
+options = Variables('options.cache', ARGUMENTS)
+options.Add(PathVariable('clam_prefix', 'The prefix where CLAM was installed', ''))
+options.Add(PathVariable('prefix', 'Installation prefix (normally /usr, by default this is clam_prefix)', "", validator=PathVariable.PathAccept))
+options.Add(PathVariable('sandbox_path', 'Path where third party libraries were installed (in windows)', "", validator=PathVariable.PathAccept))
+options.Add(BoolVariable('crossmingw', 'Using MinGW crosscompiler mode', 'no') )
 
 toolChain = 'default'
 if sys.platform == "win32": toolChain = 'mingw'
