--- a/trunk/CLAM/plugins/spacialization/3dnavigator/SConstruct
+++ b/trunk/CLAM/plugins/spacialization/3dnavigator/SConstruct
@@ -12,11 +12,11 @@ def scanFiles(pattern, paths) :
 def recursiveDirs(root) :
 	return filter( (lambda a : a.rfind( ".svn")==-1 ),  [ a[0] for a in os.walk(root)]  )
 
-options = Options('options.cache', ARGUMENTS)
-options.Add(PathOption('prefix', 'The prefix where the application will be installed', ''))
-options.Add(PathOption('clam_prefix', 'The prefix where CLAM was installed', ''))
+options = Variables('options.cache', ARGUMENTS)
+options.Add(PathVariable('prefix', 'The prefix where the application will be installed', ''))
+options.Add(PathVariable('clam_prefix', 'The prefix where CLAM was installed', ''))
 options.Add(('qt_plugins_install_path', 'Path component (without the install prefix) where to install designer plugins (tipically /lib/qt4/plugins/designer)','/bin/designer'))
-options.Add(BoolOption('verbose', 'Display the full command line instead a short command description', 'no') )
+options.Add(BoolVariable('verbose', 'Display the full command line instead a short command description', 'no') )
 
 env = Environment(ENV=os.environ, tools=['default'], options=options)
 options.Save('options.cache', env)
