--- a/trunk/CLAM/plugins/spacialization/ladspa/SConstruct
+++ b/trunk/CLAM/plugins/spacialization/ladspa/SConstruct
@@ -3,10 +3,10 @@
 import os, glob, sys
 libraryName='clam_ladspas.so'
 print 'Building', libraryName
-options = Options('../options.cache', ARGUMENTS)
-options.Add(PathOption('clam_prefix', 'The prefix where CLAM was installed', ''))
-options.Add(PathOption('prefix', 'Installation prefix (normally /usr, by default this is clam_prefix)', '', validator=PathOption.PathAccept))
-options.Add(BoolOption('crossmingw', 'Using MinGW crosscompiler mode', 'no') )
+options = Variables('../options.cache', ARGUMENTS)
+options.Add(PathVariable('clam_prefix', 'The prefix where CLAM was installed', ''))
+options.Add(PathVariable('prefix', 'Installation prefix (normally /usr, by default this is clam_prefix)', '', validator=PathVariable.PathAccept))
+options.Add(BoolVariable('crossmingw', 'Using MinGW crosscompiler mode', 'no') )
 
 toolChain = 'default'
 if sys.platform == 'win32': toolChain = 'mingw'
