--- a/trunk/CLAM/plugins/speech/SConstruct
+++ b/trunk/CLAM/plugins/speech/SConstruct
@@ -13,10 +13,10 @@ def scanFiles(pattern, paths) :
 def recursiveDirs(root) :
 	return filter( (lambda a : a.rfind( ".svn")==-1 ),  [ a[0] for a in os.walk(root)]  )
 
-options = Options('options.cache', ARGUMENTS)
-options.Add(PathOption('clam_prefix', 'The prefix where CLAM was installed', ''))
-options.Add(PathOption('prefix', 'Installation prefix (normally /usr, by default this is clam_prefix)', "", validator=PathOption.PathAccept))
-options.Add(BoolOption('crossmingw', 'Using MinGW crosscompiler mode', 'no') )
+options = Variables('options.cache', ARGUMENTS)
+options.Add(PathVariable('clam_prefix', 'The prefix where CLAM was installed', ''))
+options.Add(PathVariable('prefix', 'Installation prefix (normally /usr, by default this is clam_prefix)', "", validator=PathVariable.PathAccept))
+options.Add(BoolVariable('crossmingw', 'Using MinGW crosscompiler mode', 'no') )
 
 toolChain = 'default'
 if sys.platform == "win32": toolChain = 'mingw'
