--- a/trunk/CLAM/plugins/spacialization/SConstruct
+++ b/trunk/CLAM/plugins/spacialization/SConstruct
@@ -2,7 +2,19 @@
 
 import os, glob, sys
 
-libraryName='plugins_spacialization'
+moduleName='spacialization'
+libraryName='clam_'+moduleName
+version = "0.0.0"
+description = "Barcelona Media contributed spacialization algorigthms for the CLAM framework"
+url = 'http://clam-project.org'
+
+clamDependencies = [
+	'clam_core',
+	'clam_audioio',
+	'clam_processing',
+	]
+otherDependencies = [
+	]
 
 def scanFiles(pattern, paths) :
 	files = []
@@ -13,6 +25,7 @@ def scanFiles(pattern, paths) :
 options = Variables('options.cache', ARGUMENTS)
 options.Add(PathVariable('clam_prefix', 'The prefix where CLAM was installed', ''))
 options.Add(PathVariable('prefix', 'Installation prefix (normally /usr, by default this is clam_prefix)', "", validator=PathVariable.PathAccept))
+options.Add(BoolVariable('verbose', 'Display the full command line', 'no') )
 options.Add(PathVariable('sandbox_path', 'Path where third party libraries were installed (in windows)', "", validator=PathVariable.PathAccept))
 options.Add(BoolVariable('crossmingw', 'Using MinGW crosscompiler mode', 'no') )
 options.Add(EnumVariable('raytracing', 'Linking with Barcelona Media raytracing (not GPL)', 'disabled',
@@ -31,18 +44,13 @@ clam_sconstoolspath = os.path.join(CLAMInstallDir,'share','clam','sconstools')
 if env['crossmingw'] :
 	env.Tool('crossmingw', toolpath=[clam_sconstoolspath])
 env.Tool('clam', toolpath=[clam_sconstoolspath])
-env.EnableClamModules([
-	'clam_core',
-	'clam_audioio',
-	'clam_processing',
-	] , CLAMInstallDir)
+env.EnableClamModules(clamDependencies, CLAMInstallDir)
+env.Tool('textfile', toolpath=[clam_sconstoolspath])
+env.Tool('pc', toolpath=[clam_sconstoolspath])
+if not env['verbose'] : env.ClamQuietCompilation()
 
-sourcePaths = ["src"]
-sources = scanFiles('*.cxx', sourcePaths)
-sources = dict.fromkeys(sources).keys()
 if sys.platform=='linux2' :
 	env.Append( CCFLAGS=['-g','-O3','-Wall'] )
-	"""
 	print "adding optimization flags"
 	env.Append( CCFLAGS=[
 		'-fomit-frame-pointer', 
@@ -52,21 +60,41 @@ if sys.platform=='linux2' :
 #		'-march=nocona',
 		'-msse',
 		'-mfpmath=sse'
-	]) """
+	]) 
 
-if sys.platform=="darwin" : #TODO fix. should be available in clamlibs pc
-	env.Append( LIBPATH=['/opt/local/lib'] )
-	env.Append( LIBS='sndfile' )
-if sys.platform=="win32" or 'crossmingw' in env['TOOLS'] :
-	env.Append( LIBPATH=[os.path.join(env['sandbox_path'],'local','lib')] )
-env.Append( LIBS=['fftw3'] )
+
+# Empty plugin linking to the module library
+envPlugin = env.Clone()
+envPlugin.AppendUnique(
+	LIBS=[libraryName],
+	LIBPATH=['.'],
+	)
+plugin = envPlugin.SharedLibrary(target=libraryName+'_plugin', source = [])
+
+# pkg-config file
+pcfile = env.PkgConfigFile(
+	package = libraryName,
+	version = version,
+	prefix = env['prefix'],
+	description = description,
+	url = url,
+	requires = clamDependencies+otherDependencies,
+	cflags = [],
+	)
+
+# Sources and headers
+sourcePaths = ["src"]
+sources = scanFiles('*.cxx', sourcePaths)
+sources = dict.fromkeys(sources).keys()
+headers = scanFiles('*.hxx', sourcePaths)
 env.AppendUnique(CPPPATH=sourcePaths)
 
 if env['raytracing']=='traditional' or env['raytracing']=='convergent':
 	print 'linking with raytracing'
 	env.Append(CPPPATH=[os.path.join('..','..','..','..','acustica','raytracing')])
 	env.Append(LIBPATH=[os.path.join('..','..','..','..','acustica','raytracing')])
-	env.Append(LIBS=['raytracing',"GL","GLU","lo"])
+	env.Append(LIBS=['raytracing',"GL","GLU","lo",'glut'])
+	env.ParseConfig('pkg-config --libs sdl')
 else :
 	sources.remove(os.path.join('src','RoomImpulseResponseSimulator.cxx'))
 	sources.remove(os.path.join('src','EnvironmentManager.cxx'))
@@ -75,6 +103,13 @@ libraries = [
 	env.SharedLibrary(target=libraryName, source = sources),
 #	env.SharedLibrary(target="clam_plugins", source = sources+['ladspa/clam_plugin.cxx'], SHLIBPREFIX=''),
 	]
+
+if sys.platform=="darwin" : #TODO fix. should be available in clamlibs pc
+	env.Append( LIBPATH=['/opt/local/lib'] )
+	env.Append( LIBS='sndfile' )
+if sys.platform=="win32" or 'crossmingw' in env['TOOLS'] :
+	env.Append( LIBPATH=[os.path.join(env['sandbox_path'],'local','lib')] )
+
 
 tests = [
 	env.Program("UnitTests", scanFiles("*.cxx", ['tests'])),
@@ -89,13 +124,17 @@ runTests = Command("UnitTests.passed",tests, "%s ./UnitTests"%ld_library_path)
 examples = scanFiles('*.clamnetwork', ['example-data'])
 examples+= scanFiles('*.ui', ['example-data'])
 
+
 install = [
-	env.Install(os.path.join(InstallDir,'lib','clam'), libraries),
+	env.Install(os.path.join(InstallDir,'lib'), libraries),
+	env.Install(os.path.join(InstallDir,'lib','clam'), plugin),
+	env.Install(os.path.join(InstallDir,'lib','pkgconfig'), pcfile),
+	env.Install(os.path.join(InstallDir,'include','CLAM',moduleName), headers),
 #	env.Install(os.path.join(InstallDir,'share','networkeditor','example-data'), examples)
 	]
 
 env.Alias('install', install)
 env.Alias('tests', runTests)
-env.Default(libraries)
+env.Default(libraries, plugin, pcfile)
 
 
